%%{init: {
  "theme": "neutral",
  "class": {
    "htmlLabels": false
  }
}}%%
  classDiagram
  direction TB

  class ScoreTracker {
    +currentScore: Int
    +combo: Int
    +increaseScore(event) ScoreTracker
    +resetCombo() ScoreTracker
  }

  class ScoringRule {
    <<trait>>
    +awardedPoints(event, combo) Int
  }

  class ScoringEvent {
    <<enumeration>>
    BasicItem()
    BonusItem()
    EnemyKill()
    RemainingLives(lives)
    RemainingTime(left)
    WavesSurvived(waves)
  }

  class standardScoring {
    <<value: ScoringRule>>
  }
  class timedScoring {
    <<value: ScoringRule>>
  }
  class survivalScoring {
    <<value: ScoringRule>>
  }

  ScoreTracker ..> ScoringRule : uses
  ScoringRule ..> ScoringEvent : values
  standardScoring --> ScoringRule : value
  timedScoring --> ScoringRule : value
  survivalScoring --> ScoringRule : value
